# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.33.3
	Martin Väth <martin at mvath.de>:
	- Rename hdepend->bdepend (EAPI=7)
	- Add configure options --with-eix-{user,group,uid,gid}
	- Fix configure test for emplace_back test to include vector<bool>
	  and prepend (not append) dialect flags when testing for consistency
	  with later usage, see https://bugs.gentoo.org/show_bug.cgi?id=649558
	- Add contrib/iwyu.sh experimentally
	- Include README.md, eix.png into distribution
	- Configure diag for -Wsuggest-final-methods -Wgnu-statement-expression
	- Until a good test is known, do not add -fno-plt: it breaks with clang
	- eix-functions.sh: Fix npgettext lookup test.
	- eix-functions.sh: Fix {eval_,}ngettext fallback: 0 has plural form
	- Update compiler-flags (e.g. include gcc-8)
	- meson.buid: Unify flag adding
	- Add dummy initialization to avoid gcc-8 false positive warning
	- Add ATTRIBUTE_NONNULL_ to template specialications

*eix-0.33.2
	Martin Väth <martin at mvath.de>:
	- Bugfix: Fix typo in FORMATLINE_BEST (I18N_BESTVERSIONSSLOT) which
	  prevented printing the text "Best versions/slot:" (or a translation)
	  with eix -v
	- Introduce jumbo build and use it by default: This avoids a splitting
	  of defaults.cc into several compilation units which existed only for
	  compile-time memory reasons.
	  Use --disable-jumbo-build for compilation on low-memory systems.
	  (The produced binary might be longer and slower.)
	- Use all available compiler spectre protection with --enable-security.
	  Some are overkill for some processors, but better avoid leaking data.

*eix-0.33.1
	Martin Väth <martin at mvath.de>:
	- Fix meson tests which require dialect arg
	- Use unordered_{map,set} if available (presumably faster)
	- Use emplace, emplace_back, std::move if available (faster)
	- Prefer count() != 0 over find() != end() (presumably faster)
	- Use final and override where possible/useful; add diagnostics
	- Add memory saving flags